--- a/local.env
+++ b/local.env
@@ -8,7 +8,7 @@ NAIS_APP_NAME="kafka-consumer"
 LOG_LEVEL="DEBUG"
 CONSUMER_CONFIG="
 source:
-  type: kafka-airflow
+  type: kafka
   batch-size: 50
   batch-interval: 5
   topic: test
