--- a/local.env
+++ b/local.env
@@ -1,9 +1,9 @@
 KAFKA_BROKERS="localhost:9092"
 DATA_INTERVAL_START="1660054067141"
 DATA_INTERVAL_END="1766401710000"
-DB_USER="kafka"
-DB_PASSWORD="example"
-DB_DSN="localhost:1521/XEPDB1"
+DB_USER="t168794"
+DB_PASSWORD="mpfU0R16DV5lSowc"
+DB_DSN="10.51.9.59:1521/dwh_td"
 NAIS_APP_NAME="kafka-consumer"
 LOG_LEVEL="DEBUG"
 CONSUMER_CONFIG="
@@ -14,25 +14,18 @@ source:
   topic: test
   schema: json
   group-id: local-test
-  keypath-seperator: /
-  message-fields-filter:
-    - topic
-    - melding
-target:
+target:  
   type: oracle
   custom-config:
-    - method: oracledb.Cursor.setinputsizes
-      name: kafka_message
-      value: oracledb.BLOB
-#  skip-duplicates-with:
-    #- kafka_offset
-    #- kafka_partisjon
-  table: kafka.raa_tabell
-  k6-filter:
-    filter-table: kafka.dvh_person_ident_off_id
-    filter-col: off_id
-    timestamp: kafka_timestamp
-    col: person/personident
+  - method: oracledb.Cursor.setinputsizes
+    name: kafka_timestamp
+    value: oracledb.TIMESTAMP
+  - method: oracledb.Cursor.setinputsizes
+    name: kafka_message
+    value: oracledb.DB_TYPE_CLOB
+  skip-duplicates-with: 
+    - kafka_offset
+  table: t168794.raa_tabell
 transform:
   - src: kafka_message
     dst: kafka_message
