update hello.json file, add zookeeper to dockerfile, update local.env

--- a/utviklingsmiljo/docker-compose.yml
+++ b/utviklingsmiljo/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     image: confluentinc/cp-kafka:7.6.0
     hostname: broker
     container_name: broker
+    depends_on:
+      - zookeeper
     ports:
       - "9092:9092"
       - "9101:9101"
@@ -25,6 +27,7 @@ services:
       KAFKA_INTER_BROKER_LISTENER_NAME: 'PLAINTEXT'
       KAFKA_CONTROLLER_LISTENER_NAMES: 'CONTROLLER'
       KAFKA_LOG_DIRS: '/tmp/kraft-combined-logs'
+      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
       # Replace CLUSTER_ID with a unique base64 UUID using "bin/kafka-storage.sh random-uuid" 
       # See https://docs.confluent.io/kafka/operations-tools/kafka-tools.html#kafka-storage-sh
       CLUSTER_ID: 'MkU3OEVBNTcwNTJENDM2Qk'
@@ -95,6 +98,16 @@ services:
       CONTROL_CENTER_MONITORING_INTERCEPTOR_TOPIC_PARTITIONS: 1
       CONFLUENT_METRICS_TOPIC_REPLICATION: 1
       PORT: 9021
+  
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.6.1
+    hostname: zookeeper
+    container_name: zookeeper
+    ports:
+      - "2181:2181"
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
 
   ksqldb-server:
     image: confluentinc/cp-ksqldb-server:7.6.0
