--- a/local.env
+++ b/local.env
@@ -36,6 +36,8 @@ transform:
   - src: kafka_offset
     dst: kafka_offset
   - src: kafka_timestamp
+    dst: kafka_timestamp
+  - src: kafka_timestamp
     dst: kafka_mottatt_dato
     fun: int-unix-ms -> datetime-no
   - src: kafka_partition
@@ -44,6 +46,8 @@ transform:
     dst: kafka_hash
   - src: $$BATCH_TIME
     dst: lastet_dato
+  - src: $$BATCH_TIME
+    dst: oppdatert_dato
   - src: $MODIA
     dst: kildesystem
 
